data/derived/sp14/progs/unify/prog2020.ml.out
Characters 146-175:
  else if (diff > 0) then List.append (clone 0 diff) l2;;
                          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type int list
       but an expression was expected of type unit
